--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -3,9 +3,16 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
+<title>welcome</title>
 </head>
 <body>
+<center>
 <h1> Welcome to BridgeLabz</h1>
+<div>
+		<form action="LoginHttpServlet" method="post">
+		<input type="submit" value="LogIn">
+		</form>
+</div>
+</center>
 </body>
 </html>
